Add JVM fork options to Asciidoctor Convention Plugin.